added deploy function

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
+    "deploy": "npm run build && firebase deploy",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
